@@ -1,3 +1,7 @@
+2017-03-09  Jérôme Pasquier  <rainbru@free.fr>
+
+	* ROADMAP: postpone overlays in highter resolution bug.
+
 2017-02-24  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/ConfirmationDialog.cpp (onCancel): move event handler
